--- a/src/styles/HeroSection.css
+++ b/src/styles/HeroSection.css
@@ -1,11 +1,14 @@
+p {
+  text-align: justify;
+}
+
 .hero-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
   max-width: 1200px;
-  text-align: center;
+  margin: 0 auto;
+  padding: 50px 20px;
+  opacity: 0;
+  transform: translateY(50px);
+  transition: all 0.6s ease-in-out;
 }
 
 .hero-section.visible {
@@ -13,20 +16,82 @@
   transform: translateY(0);
 }
 
-.hero-content {
-  text-align: center;
-  padding: 50px;
+.hero-title {
+  text-align: left;
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin-bottom: 20px;
+  color: black;
 }
 
-.hero-section,
-.quotes-section,
-.partners-carousel {
+.hero-image-wrapper {
+  position: relative;
   width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 50px 20px;
+  overflow: hidden;
+  border-radius: 30px;
+  margin-bottom: 40px;
 }
 
 .imagemDestaque {
-  border-radius: 50px;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 30px;
+}
+
+.seta-icon {
+  position: absolute;
+  bottom: 15px;
+  right: 15px;
+  background-color: black;
+  border-radius: 50%;
+  padding: 10px;
+}
+
+.seta-icon img {
+  width: 20px;
+  height: 20px;
+}
+
+.hero-text-container {
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+  flex-wrap: wrap;
+}
+
+.hero-highlight {
+  flex: 1;
+  font-size: 2rem;
+  font-weight: 600;
+  text-align: right;
+  min-width: 250px;
+  color: black;
+}
+
+.hero-description {
+  flex: 2;
+  font-size: 1rem;
+  color: black;
+  min-width: 250px;
+}
+
+@media (max-width: 768px) {
+  .hero-text-container {
+    flex-direction: column;
+  }
+
+  .hero-title {
+    text-align: center;
+  }
+
+  .hero-highlight,
+  .hero-description {
+    text-align: center;
+  }
+
+  .seta-icon {
+    right: 10px;
+    bottom: 10px;
+  }
 }
