--- a/src/styles/MainSection.css
+++ b/src/styles/MainSection.css
@@ -37,7 +37,7 @@
   width: 100%;
   border-radius: 10px;
   object-fit: cover;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 10px #606060;
 }
 
 /* Frase */
@@ -57,7 +57,7 @@
 }
 
 .quote hr {
-  width: 30em;
+  width: 33em;
   border: 2px solid #000;
 }
 
@@ -82,6 +82,7 @@
   width: 100%;
   border-radius: 10px;
   margin-bottom: 10px;
+  box-shadow: 0 4px 10px #606060;
 }
 
 .block h3 {
@@ -142,6 +143,7 @@
   border-radius: 12px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   text-align: left;
+  box-shadow: 0 4px 10px #606060;
 }
 
 .value-card span {
