--- a/src/styles/PartnersCarousel.css
+++ b/src/styles/PartnersCarousel.css
@@ -4,8 +4,8 @@
 }
 
 .partners-carousel h2 {
-  font-size: 2rem;
-  font-weight: bold;
+  font-size: 3.5rem;
+  font-weight: 600;
   margin-bottom: 40px;
   color: black;
 }
@@ -25,7 +25,7 @@
   height: 100px;
   border-radius: 50%;
   object-fit: cover;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 4px 10px #606060;
   margin: 0 auto 10px;
 }
 
