--- a/src/styles/QuotesSection.css
+++ b/src/styles/QuotesSection.css
@@ -22,9 +22,8 @@
 }
 
 .quote-title .line {
-  flex: 1;
-  height: 2px;
-  background-color: black;
+  width: 35em;
+  border: 2px solid #000;
 }
 
 .quote-title h2 {
@@ -53,6 +52,7 @@
   border-radius: 20px;
   height: 180px;
   object-fit: cover;
+  box-shadow: 0 4px 10px #606060;
 }
 
 /* Citação + texto descritivo */
